Fix bottom panel responsiveness and fix main layout uneven

--- a/src/assets/landing-2.css
+++ b/src/assets/landing-2.css
@@ -5,11 +5,15 @@
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: space-around;
-    gap: 0px;
+    justify-content: center;
+    gap: 0vw;
 
     position: relative;
-    width: 80vw;
+    margin: 0;
+    padding: 0;
+
+    position: relative;
+    width: 100vw;
     height: 100vh;
 }
 
@@ -48,8 +52,8 @@
     font-family: 'Ubuntu';
     font-style: normal;
     font-weight: 500;
-    font-size: 18px;
-    line-height: 21px;
+    font-size: clamp(11px, 2vw + 0.1rem, 18px);
+    line-height: clamp(8px, 4vw + 0.1rem, 21px);
 
     color: #5F5F5F;
 
@@ -70,7 +74,9 @@
     padding: 0px 5px;
     gap: 25px;
 
-    max-width: 623px;
+    margin: 0;
+
+    width: 40vw;
 }
 
 .landing-subpage-right-wrapper {
@@ -80,6 +86,12 @@
     flex: none;
     order: 1;
     flex-grow: 0;
+}
+
+.landing-subpage-animation-canvas {
+    background-color: brown;
+    width: 45vw;
+    height: 45vw;
 }
 
 @media all and (max-width: 1000px) {
@@ -92,13 +104,12 @@
         gap: 10vw;
 
         width: 100vw;
-
-        padding: 10vh 0;
     }
 
     .landing-subpage-left-wrapper {
         justify-content: center;
         align-items: center;
+        width: 80vw;
     }
 
     .landing-subpage-heading {
@@ -106,7 +117,6 @@
     }
 
     .landing-subpage-animation-canvas {
-        background-color: brown;
         width: 80vw;
         height: 80vw;
     }
